2008-06-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-nw-hooks.lisp (leave-focus-frame-nw-hook): Adapt
	behaviour to the new raise/lower property.
	Call clear-nw-hook before the rest of the hook.

	* src/bindings.lisp (mouse-click-to-focus-and-move-window)
	(mouse-click-to-focus-and-resize-window): Stop button event. This
	prevent a keyboard/pointer freeze.

2008-06-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (frame-lower-child)
	(frame-raise-child): New functions to raise/lower a child in its
	frame.

	* src/clfswm-util.lisp (have-to-present-windows)
	(have-to-present-all-windows): New functions to have an MaxOS
	expose like on mouse click in screen corner.

	* src/clfswm-info.lisp ("Page_Down", "Page_Up"): Add boundaries.

2008-05-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (unhide-a-child-from-all-frames): Unhide a
	child from a choice in all frames with hidden children.

	* src/clfswm-info.lisp (info-mode-menu): Handle separators.

2008-05-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (hide-current-child, unhide-a-child)
	(unhide-all-children): New functions.

	* src/clfswm-info.lisp (info-mode-menu): Handle symbols and
	functions.

	* src/clfswm-util.lisp (hide/show-frame-window): new function and
	menu item.

2008-05-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (rename-current-child): Do not display the
	frame info for a window.

2008-05-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (remove-child-in-frame): Destroy the
	frame window for the removed child and its children.

2008-05-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-*-doc-*): Add a note to use the
	autodoc functions.

2008-05-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-nw-hooks.lisp (default-frame-nw-hook): Do not handle