@@ -63,6 +63,12 @@
     <p>
       a: Unhide all current frame hidden children
     </p>
+    <p>
+      Page_Up: Lower the child in the current frame
+    </p>
+    <p>
+      Page_Down: Raise the child in the current frame
+    </p>
     <hr>
     <h3>
       <a name="FRAME-MENU"></a><a href="#MAIN">Frame-Menu</a>
