@@ -114,6 +114,11 @@
 (define-second-key ("Return" :mod-1) 'enter-frame)
 (define-second-key ("Return" :mod-1 :shift) 'leave-frame)
 
+
+(define-second-key ("Page_Up" :mod-1) 'frame-lower-child)
+(define-second-key ("Page_Down" :mod-1) 'frame-raise-child)
+
+
 (define-second-key ("Home" :mod-1) 'switch-to-root-frame)
 (define-second-key ("Home" :mod-1 :shift) 'switch-and-select-root-frame)
 
